refactor(School): Some command has been simplified.

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -328,8 +328,8 @@
     "class School(Agent):\n",
     "    def __init__(self, name):\n",
     "        super().__init__(name)\n",
-    "        self.students = []  \n",
-    "        self.courses = [] \n",
+    "        self.students = {}  \n",
+    "        self.courses = {}\n",
     "        self.is_open = True \n",
     "        self.agent_manager = AgentManager() \n",
     "\n",
@@ -355,13 +355,8 @@
     "    # School methods-------------------------------------------------------------------------------------------------------------------------\n",
     "    \n",
     "    def create_course(self, course_name):\n",
-    "        course_exists = False\n",
-    "        for course in self.courses:\n",
-    "            if course.name == course_name:\n",
-    "                course_exists = True\n",
-    "                break\n",
-    "        if not course_exists:\n",
-    "            self.courses.append(Course(course_name))\n",
+    "        if not course_name in self.courses:\n",
+    "            self.courses[course_name] = Course(course_name)\n",
     "            print(f\"Course '{course_name}' has been created in school '{self.name}'.\")\n",
     "        else:\n",
     "            print(f\"Course '{course_name}' already exists in school '{self.name}'.\")\n",
@@ -383,21 +378,20 @@
     "                print(f\"- {student} (Course: {course})\") \n",
     "    \n",
     "    def admit_student_from_queue(self, course_name):\n",
-    "        for course in self.courses:\n",
-    "            if course.name == course_name:\n",
-    "                if not course.enrollment_queue.is_empty():\n",
-    "                    student_name = course.enrollment_queue.dequeue()\n",
-    "                    student = self.agent_manager.get_agent_by_name(student_name, Client)\n",
-    "                    if student:\n",
-    "                        course.students.append(student_name)\n",
-    "                        print(f\"The student '{student_name}' has been admitted to the course '{course.name}'.\")\n",
-    "                    else:\n",
-    "                        print(f\"Client '{student_name}' not found.\")\n",
+    "        course = self.getCourse(course_name)\n",
+    "        if course:\n",
+    "            if not course.enrollment_queue.is_empty():\n",
+    "                student_name = course.enrollment_queue.dequeue()\n",
+    "                student = self.agent_manager.get_agent_by_name(student_name, Client)\n",
+    "                if student:\n",
+    "                    course.students.append(student_name)\n",
+    "                    print(f\"The student '{student_name}' has been admitted to the course '{course.name}'.\")\n",
     "                else:\n",
-    "                    print(f\"The enrollment queue for course '{course.name}' is empty.\")\n",
-    "                break    \n",
+    "                    print(f\"Client '{student_name}' not found.\")\n",
+    "            else:\n",
+    "                print(f\"The enrollment queue for course '{course.name}' is empty.\")\n",
     "        else:\n",
-    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
+    "            print(f\"The course '{course_name}' does not exist in school '{self.name}'.\")\n",
     "    \n",
     "    def show_courses(self):\n",
     "        if len(self.courses) == 0:\n",
@@ -408,7 +402,6 @@
     "                print(f\"- {course.name}\")\n",
     "    \n",
     "    def remove_student(self, client_name):\n",
-    "        try:\n",
     "            student = self.agent_manager.get_agent_by_name(client_name, Client)\n",
     "            \n",
     "            if client_name in self.students:\n",
@@ -417,8 +410,6 @@
     "                print(f\"Student '{client_name}' has been removed from school '{self.name}'.\")\n",
     "            else:\n",
     "                print(f\"Student '{client_name}' not found in school '{self.name}'.\")     \n",
-    "        except:\n",
-    "            print(f\"Student '{student_name}' do not exist.\")       \n",
     "    \n",
     "    def open_close(self, school_name, action):\n",
     "        if action == \"open\":\n",
@@ -441,52 +432,46 @@
     "            print(f\"Unknown action '{action}'. Use 'open' or 'close'.\")\n",
     "    \n",
     "    def add_exam_to_course(self, course_name, exam_name):\n",
-    "            for course in self.courses:\n",
-    "                if course.name == course_name:\n",
-    "                    exam_exist = False\n",
-    "                    for exam in course.exams:\n",
-    "                        if exam.name == exam_name: \n",
-    "                            print(f\"The exam '{exam_name}' already exists and is associated with course '{course.name}'.\")\n",
-    "                            exam_exist = True\n",
-    "                            break\n",
-    "                    if not exam_exist:\n",
-    "                        new_exam = Exam(exam_name)\n",
-    "                        course.exams.append(new_exam)\n",
-    "                        print(f\"The exam '{new_exam.name}' has been added to course '{course_name}'.\")\n",
-    "                    break  \n",
+    "        course = self.getCourse(course_name)\n",
+    "        if course:\n",
+    "            exam = course.getExam(exam_name)\n",
+    "            if exam:\n",
+    "                print(f\"The exam '{exam_name}' already exists and is associated with course '{course.name}'.\")\n",
     "            else:\n",
-    "                print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
+    "                new_exam = Exam(exam_name)\n",
+    "                course.exams.append(new_exam)\n",
+    "                print(f\"The exam '{new_exam.name}' has been added to course '{course_name}'.\")\n",
+    "        else:\n",
+    "            print(f\"The course '{course_name}' does not exist in school '{self.name}'.\")\n",
     "    \n",
     "    def grade_exam(self, school_name, course_name, client_name, exam_name):\n",
     "        pass\n",
     "    \n",
     "    def remove_exam_from_course(self, course_name, exam_name):\n",
-    "        for course in self.courses:\n",
-    "            if course_name == course.name:\n",
-    "                for exam in course.exams:\n",
-    "                    if exam_name == exam.name:\n",
-    "                        if len(exam.exams_student) <= 0:\n",
-    "                            course.exams.remove(exam)\n",
-    "                            print(f\"The exam '{exam_name}' has been removed successfully from '{course.name}'.\")\n",
-    "                        else:\n",
-    "                            print(f\"The exam '{exam.name}' cannot be removed because a student has already taken it.\")\n",
-    "                        break\n",
+    "        course = self.getCourse(course_name)\n",
+    "        if course:\n",
+    "            exam = course.getExam(exam_name)\n",
+    "            if exam:\n",
+    "                if len(exam.exams_student) <= 0:\n",
+    "                    course.exams.remove(exam)\n",
+    "                    print(f\"The exam '{exam_name}' has been removed successfully from '{course.name}'.\")\n",
     "                else:\n",
-    "                    print(f\"The exam '{exam_name}' do not exist in course '{course.name}'.\")\n",
-    "                break\n",
+    "                    print(f\"The exam '{exam.name}' cannot be removed because a student has already taken it.\")\n",
+    "            else:\n",
+    "                print(f\"The exam '{exam_name}' do not exist in course '{course.name}'.\")\n",
     "        else:\n",
-    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
+    "            print(f\"The course '{course_name}' does not exist in school '{self.name}'.\")\n",
     "    \n",
     "    def show_exams(self, course_name):\n",
-    "        for course in self.courses:\n",
-    "            if course_name == course.name:\n",
-    "                if len(course.exams) > 0:\n",
-    "                    print(f\"Exams in {course.name}: \")\n",
-    "                    for exam in course.exams:\n",
-    "                        print(f\"- {exam.name}\")\n",
-    "                else:\n",
-    "                    print(f\"There is no exams in {course.name}.\")\n",
-    "                break\n",
+    "        course = self.getCourse(course_name)\n",
+    "        if course:\n",
+    "            if len(course.exams) > 0:\n",
+    "                print(f\"Exams in {course.name}: \")\n",
+    "                for exam in course.exams:\n",
+    "                    print(f\"- {exam.name}\")\n",
+    "            else:\n",
+    "                print(f\"There is no exams in {course.name}.\")\n",
+    "            break\n",
     "        else:\n",
     "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
@@ -494,6 +479,10 @@
     "        self.agent_manager.remove_agent(self.name)\n",
     "    \n",
     "    # Other methods-----------------------------------------------------------\n",
+    "    \n",
+    "    def getCourse(course_name):\n",
+    "        if course_name in self.courses:\n",
+    "            return self.courses[course_name]\n",
     "    \n",
     "    def enroll_in_school(self, client_name):\n",
     "        if client_name not in self.students:\n",
@@ -520,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -529,8 +518,12 @@
     "    def __init__(self, name):\n",
     "        self.name = name\n",
     "        self.students = []  \n",
-    "        self.exams = [] \n",
-    "        self.enrollment_queue = Queue()"
+    "        self.exams = {}\n",
+    "        self.enrollment_queue = Queue()\n",
+    "    \n",
+    "    def getExam(exam_name):\n",
+    "        if exam_name in self.exams:\n",
+    "            return self.exams[exam_name]"
    ]
   },
   {
@@ -543,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -564,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -812,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -845,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -890,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -909,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -917,41 +910,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting city simulation... Type 'q' to exit\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  ?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Starting city simulation... Type 'q' to exit\n",
       "\n",
-      "            Available help commands:\n",
-      "            - ? school: Show available commands for schools.\n",
-      "            - ? client: Show available commands for clients.\n",
-      "            - load_agents <file_path>: Load agents from a JSON file.\n",
-      "            - save_agents <file_path>: Save agents to a JSON file.\n",
-      "            - q: Exit the simulation.              \n",
-      "            \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  ? school\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "School EOI added to the system.\n",
+      "School 'EOI' added to the system.\n",
       "Available commands for school:\n",
       "-school add_school <school_name>: Add a new school to the system.\n",
       "-school create_course <course_name> <school_name>: Create a new course at school.\n",
@@ -966,145 +928,9 @@
       "-school remove_exam_from_course <school_name> <course_name> <exam_name>: Remove an exam from a course if no client has submitted it.\n",
       "-school show_exams <school_name> <course_name>: Show the list of exams available for a course at the school.\n",
       "-school remove_school <school_name>: Removes the school from the agents.\n",
-      "-quit: q: Exit the simulation.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  school add_school\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Invalid command format. Use 'school add_school <school_name>'.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  school add_school EOI\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "School EOI added to the system.\n",
-      "School 'EOI' added to the system.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  school create_course EOI Python\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: School 'Python' not found.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  school create_course Python EOI\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Course 'Python' has been created in school 'EOI'.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  school show_courses\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error: Invalid command format. Use 'school show_courses <school_name>'.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  school show_courses EOI\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Courses in school 'EOI':\n",
-      "- Python\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  school add_exam_to_course EOI Python Chapter01\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The exam 'Chapter01' has been added to course 'Python'.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  school add_exam_to_course EOI Python Chapter02\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The exam 'Chapter02' has been added to course 'Python'.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  school show_exams EOI Python\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exams in Python: \n",
-      "- Chapter01\n",
-      "- Chapter02\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ">  q\n"
+      "-quit: q: Exit the simulation.\n",
+      "Course 'Python' has been created in school 'EOI'.\n",
+      "Course 'Python' already exists in school 'EOI'.\n"
      ]
     }
    ],
@@ -1114,14 +940,6 @@
     "    simulation = CitySimulation()\n",
     "    simulation.command_loop() "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99845d1c-d284-40db-9e83-cb777a8d36f7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
