refactor(Client): The client code has been simplified

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -234,41 +234,38 @@
     "            print(f'Client {self.name} is already enrolled in {self.school_stack.peek()}.')\n",
     "    \n",
     "    def leave_school(self):\n",
-    "            if not self.school_stack.is_empty():\n",
-    "                school_name = self.school_stack.pop()\n",
-    "                if school_name: \n",
-    "                    school = self.agent_manager.get_agent_by_name(school_name, School)\n",
-    "                    if school:\n",
-    "                        school.students.remove(self.name)\n",
+    "        \"\"\"Permite que un cliente deje la escuela en la que está inscrito.\"\"\"\n",
+    "        if not self.school_stack.is_empty():\n",
+    "            school_name = self.school_stack.pop()\n",
+    "            if school_name:\n",
+    "                school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "                if school:\n",
+    "                    if self.name in school.students:\n",
+    "                        del school.students[self.name]\n",
+    "                        self.school_stack.pop()\n",
     "                        print(f'{self.name} exited {school_name}.')\n",
     "                    else:\n",
-    "                        print(f\"Error: School '{school_name}' not found.\")\n",
-    "                else:\n",
-    "                    print(f\"{self.name}'s school name was empty or invalid.\")\n",
+    "                        print(f\"Error: {self.name} is not enrolled in {school_name}.\")\n",
     "            else:\n",
-    "                print(f'{self.name} is not currently enrolled in any school.')\n",
+    "                print(f\"{self.name}'s school name was empty or invalid.\")\n",
+    "        else:\n",
+    "            print(f'{self.name} is not currently enrolled in any school.')\n",
+    "\n",
     "    \n",
     "    def join_enrollment_queue(self, school_name, course_name):\n",
     "            school = self.agent_manager.get_agent_by_name(school_name, School)\n",
     "            if school:\n",
     "                if self.name in school.students:\n",
-    "                    for course in school.courses:\n",
-    "                        if course.name == course_name:\n",
-    "                            if self.name in course.students:\n",
-    "                                print(f\"{self.name} is already enrolled in {course_name} at {school_name}.\")\n",
-    "                                break\n",
-    "                            already_in_queue = False\n",
-    "                            for student in course.enrollment_queue.queue:\n",
-    "                                if student == self.name:\n",
-    "                                    already_in_queue = True\n",
-    "                                    break\n",
-    "\n",
-    "                            if not already_in_queue:\n",
+    "                    course = school.getCourse(course_name)\n",
+    "                    if course:\n",
+    "                        if self.name in course.students:\n",
+    "                            print(f\"{self.name} is already enrolled in {course_name} at {school_name}.\")\n",
+    "                        else:\n",
+    "                            if self.name in course.enrollment_queue.queue:\n",
+    "                                print(f\"{self.name} is already in the enrollment queue for {course_name} in {school_name}.\")\n",
+    "                            else:\n",
     "                                course.enrollment_queue.enqueue(self.name)\n",
     "                                print(f\"{self.name} joined the enrollment queue for {course_name} in {school_name}.\")\n",
-    "                            else:\n",
-    "                                print(f\"{self.name} is already in the enrollment queue for {course_name} in {school_name}.\")\n",
-    "                            break\n",
     "                    else:\n",
     "                        print(f\"{course_name} is not available in {school_name}.\")\n",
     "                else:\n",
@@ -284,18 +281,18 @@
     "            school_name = self.school_stack.peek()\n",
     "            school = self.agent_manager.get_agent_by_name(school_name, School)\n",
     "            if school:\n",
-    "                for course in school.courses:\n",
-    "                    if course.name == course_name:\n",
-    "                        for exam in course.exams:\n",
-    "                            if exam.name == exam_name:\n",
-    "                                exam.exams_student[self.name] = ''\n",
-    "                                print(f\"The exam '{exam.name}' has been taken by the student '{self.name}'.\")\n",
-    "                                break\n",
-    "                        else:\n",
-    "                            print(f\"The exam '{exam_name}' do not exist in course '{course.name}'.\")\n",
-    "                        break\n",
+    "                course = school.getCourse(course_name)\n",
+    "                if course:\n",
+    "                    exam = course.getExam(exam_name)\n",
+    "                    if exam:\n",
+    "                        exam.exams_student[self.name] = ''\n",
+    "                        print(f\"The exam '{exam.name}' has been taken by the student '{self.name}'.\")\n",
+    "                    else:\n",
+    "                        print(f\"The exam '{exam_name}' do not exist in course '{course.name}'.\")\n",
     "                else:\n",
     "                    print(f\"{course_name} is not available in {school_name}.\")\n",
+    "            else:\n",
+    "                print(f\"School '{school_name}' do not exist.\")\n",
     "        else:\n",
     "            print(f\"The student '{self.name}' is not enrolled in any school.\")\n",
     "    \n",
@@ -391,21 +388,21 @@
     "            else:\n",
     "                print(f\"The enrollment queue for course '{course.name}' is empty.\")\n",
     "        else:\n",
-    "            print(f\"The course '{course_name}' does not exist in school '{self.name}'.\")\n",
+    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def show_courses(self):\n",
-    "        if len(self.courses) == 0:\n",
+    "        if len(self.courses) <= 0:\n",
     "            print(f\"There is no courses in school '{self.name}'.\")\n",
     "        else:\n",
     "            print(f\"Courses in school '{self.name}':\")\n",
     "            for course in self.courses:\n",
-    "                print(f\"- {course.name}\")\n",
+    "                print(f\"- {course}\")\n",
     "    \n",
     "    def remove_student(self, client_name):\n",
     "            student = self.agent_manager.get_agent_by_name(client_name, Client)\n",
     "            \n",
     "            if client_name in self.students:\n",
-    "                self.students.remove(client_name)\n",
+    "                del self.students[client_name]\n",
     "                student.school_stack.pop()\n",
     "                print(f\"Student '{client_name}' has been removed from school '{self.name}'.\")\n",
     "            else:\n",
@@ -439,10 +436,10 @@
     "                print(f\"The exam '{exam_name}' already exists and is associated with course '{course.name}'.\")\n",
     "            else:\n",
     "                new_exam = Exam(exam_name)\n",
-    "                course.exams.append(new_exam)\n",
+    "                course.exams[new_exam.name] = new_exam\n",
     "                print(f\"The exam '{new_exam.name}' has been added to course '{course_name}'.\")\n",
     "        else:\n",
-    "            print(f\"The course '{course_name}' does not exist in school '{self.name}'.\")\n",
+    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def grade_exam(self, school_name, course_name, client_name, exam_name):\n",
     "        pass\n",
@@ -453,14 +450,14 @@
     "            exam = course.getExam(exam_name)\n",
     "            if exam:\n",
     "                if len(exam.exams_student) <= 0:\n",
-    "                    course.exams.remove(exam)\n",
+    "                    del course.exams[exam.name]\n",
     "                    print(f\"The exam '{exam_name}' has been removed successfully from '{course.name}'.\")\n",
     "                else:\n",
     "                    print(f\"The exam '{exam.name}' cannot be removed because a student has already taken it.\")\n",
     "            else:\n",
     "                print(f\"The exam '{exam_name}' do not exist in course '{course.name}'.\")\n",
     "        else:\n",
-    "            print(f\"The course '{course_name}' does not exist in school '{self.name}'.\")\n",
+    "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
     "    def show_exams(self, course_name):\n",
     "        course = self.getCourse(course_name)\n",
@@ -468,10 +465,9 @@
     "            if len(course.exams) > 0:\n",
     "                print(f\"Exams in {course.name}: \")\n",
     "                for exam in course.exams:\n",
-    "                    print(f\"- {exam.name}\")\n",
+    "                    print(f\"- {exam}\")\n",
     "            else:\n",
     "                print(f\"There is no exams in {course.name}.\")\n",
-    "            break\n",
     "        else:\n",
     "            print(f\"The course '{course_name}' is not found at the school {self.name}.\")\n",
     "    \n",
@@ -480,13 +476,13 @@
     "    \n",
     "    # Other methods-----------------------------------------------------------\n",
     "    \n",
-    "    def getCourse(course_name):\n",
+    "    def getCourse(self, course_name):\n",
     "        if course_name in self.courses:\n",
     "            return self.courses[course_name]\n",
     "    \n",
     "    def enroll_in_school(self, client_name):\n",
     "        if client_name not in self.students:\n",
-    "            self.students.append(client_name)\n",
+    "            self.students[client_name] = client_name\n",
     "            print(f\"Client '{client_name}' has been enrolled in school '{self.name}'.\")\n",
     "        else:\n",
     "            print(f\"Client '{client_name}' is already enrolled in school '{self.name}'.\")\n",
@@ -509,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "6fbc5b5e",
    "metadata": {},
    "outputs": [],
@@ -521,7 +517,7 @@
     "        self.exams = {}\n",
     "        self.enrollment_queue = Queue()\n",
     "    \n",
-    "    def getExam(exam_name):\n",
+    "    def getExam(self, exam_name):\n",
     "        if exam_name in self.exams:\n",
     "            return self.exams[exam_name]"
    ]
@@ -536,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "id": "dc9bd098",
    "metadata": {},
    "outputs": [],
@@ -557,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -805,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -838,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -883,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -902,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -912,25 +908,29 @@
      "text": [
       "Starting city simulation... Type 'q' to exit\n",
       "\n",
+      "Client Billy added to the system.\n",
+      "Client 'Billy' added to the system.\n",
+      "\n",
       "School EOI added to the system.\n",
       "School 'EOI' added to the system.\n",
-      "Available commands for school:\n",
-      "-school add_school <school_name>: Add a new school to the system.\n",
-      "-school create_course <course_name> <school_name>: Create a new course at school.\n",
-      "-school show_students <school_name>: Show the list of all students registered at school.\n",
-      "-school show_enrollment_queue <school_name>: Show the enrollment queue for the course.\n",
-      "-school admit_student_from_queue <school_name> <course_name>: Admit the next student from the queue to enroll in to a course.\n",
-      "-school show_courses <school_name>: Show the available courses at school.\n",
-      "-school remove_student <school_name> <client_name>: Remove a student from school.\n",
-      "-school show_list: Show the list of schools in the system\n",
-      "-school close / open <schol_name>: Open / close school, if there isn't students at class\n",
-      "-school add_exam_to_course <school_name> <course_name> <exam_name>: Add an exam to a specific course at school.\n",
-      "-school remove_exam_from_course <school_name> <course_name> <exam_name>: Remove an exam from a course if no client has submitted it.\n",
-      "-school show_exams <school_name> <course_name>: Show the list of exams available for a course at the school.\n",
-      "-school remove_school <school_name>: Removes the school from the agents.\n",
-      "-quit: q: Exit the simulation.\n",
+      "Client 'Billy' has been enrolled in school 'EOI'.\n",
       "Course 'Python' has been created in school 'EOI'.\n",
-      "Course 'Python' already exists in school 'EOI'.\n"
+      "Billy joined the enrollment queue for Python in EOI.\n",
+      "The student 'Billy' has been admitted to the course 'Python'.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[66], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;18m__name__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m      3\u001b[0m     simulation \u001b[38;5;241m=\u001b[39m CitySimulation()\n\u001b[1;32m----> 4\u001b[0m     \u001b[43msimulation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcommand_loop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[62], line 54\u001b[0m, in \u001b[0;36mCitySimulation.command_loop\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m command \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mq\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m     53\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m---> 54\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mprocess_command\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcommand\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[62], line 146\u001b[0m, in \u001b[0;36mCitySimulation.process_command\u001b[1;34m(self, command)\u001b[0m\n\u001b[0;32m    144\u001b[0m         school \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_agent_or_error(school_name, School, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mschool_not_found\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    145\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m school:\n\u001b[1;32m--> 146\u001b[0m             \u001b[43mschool\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_exam_to_course\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcourse_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mexam_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    148\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m parts[\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mremove_exam_from_course\u001b[39m\u001b[38;5;124m'\u001b[39m:\n\u001b[0;32m    149\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvalidate_command(parts, \u001b[38;5;241m5\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minvalid_format\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mschool remove_exam_from_course <school_name> <course_name> <exam_name>\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "Cell \u001b[1;32mIn[59], line 115\u001b[0m, in \u001b[0;36mSchool.add_exam_to_course\u001b[1;34m(self, course_name, exam_name)\u001b[0m\n\u001b[0;32m    113\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    114\u001b[0m         new_exam \u001b[38;5;241m=\u001b[39m Exam(exam_name)\n\u001b[1;32m--> 115\u001b[0m         \u001b[43mcourse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexams\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mappend\u001b[49m(new_exam)\n\u001b[0;32m    116\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe exam \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew_exam\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m has been added to course \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcourse_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    117\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'append'"
      ]
     }
    ],
